test/errors/auxiliary/good-base.jade
!!!
html
  head
    meta(charset="utf-8")
    block head
  body
    header
      | text
    #content
      block content
    footer
      | text
